--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="Blue200">#FF66A1D2</color>
+    <color name="Blue500">#FF3F8FD2</color>
+    <color name="Blue700">#FF0B5FA5</color>
 </resources>
